changes in index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     </section>
     <footer>
-        <p>Emily Web Design, Copyright @Copy; 2020</p>
+        <p>Emily Web Design, Copyright @Copy-2020</p>
     </footer>
 </body>
 </html>
